--- a/1_analysis/2g_baseline_predictors_supplemental_figures.Rmd
+++ b/1_analysis/2g_baseline_predictors_supplemental_figures.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "missing_daily_between"
+title: "Make supplemental figures for baseline between-person predictors of missing data"
 output: html_document
 date: "2022-08-23"
 ---
@@ -25,21 +25,17 @@ theme_set(theme_bw())
 source('model_wrapper_functions.R')
 ```
 
-# Frequentist
+# Load models
 
 ```{r}
 load('../../cleaned_data/cleaned_data_for_daily_models.rda')
 load('../../cleaned_data/cleaned_baseline_data.rda')
-```
 
-
-# Bayes
-
-```{r}
 m = length(clinical_predictors)
 corrected_conf_level = 1-(0.05/m)
 ```
 
+# Function to make conditional effects (marginal predictions) plot
 ```{r}
 make_conditional_effects_baseline = function(input_data, type){
     conditions = data.frame(personal_time_z = -1)
@@ -61,7 +57,7 @@ make_conditional_effects_baseline = function(input_data, type){
                                     'MFQ_i'='Depression Symptoms (MFQ)',
                                     'SITBI_sa_ever'='Liftime Suicide Attempt (SITBI)', 'SHAPS_TOT_r_i'='Anhedonia (SHAPS)','comorbidity_current'='# Current Diagnoses',
                                     'SITBI_si_ever'='Lifetime Suicidal Ideaction (SITBI)', 'hospitalization_pastyear' = 'Past Year Hospitalization',
-                                    'visit_er_pastyear'='Past Year ER Visit', 'SITBI_SB_ever'='Lifetime Suicidal Behavior (SITBI)',
+                                    'visit_er_pastyear'='Past Year ED Visit', 'SITBI_SB_ever'='Lifetime Suicidal Behavior (SITBI)',
                                     'SCARED_i'='Anxiety Symptoms (SCARED)', 'SSI19_i'='Suicidal Ideation Severity (SSI)',
                                     'INQ_burdenensomeness_i'='Percieved Burdensomeness (INQ)', 'INQ_thwartedbelonging_i'='Thwarted Belonging (INQ)',
                                     'hispanic'='Hispanic','income_ordinal'='Parental Income',
