--- a/1_analysis/5a_daily_mood_weekly_si_autocor.Rmd
+++ b/1_analysis/5a_daily_mood_weekly_si_autocor.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "missing_daily_between"
+title: "Autocorelations of Daily Mood, Weekly Suicidal Ideation Frequency, and their Respective Missingness"
 output: html_document
 date: "2022-08-23"
 ---
